# whatsapp-le-parser

./: .editorconfig  .gitignore  README  flake.nix  pyproject.toml  treefmt.toml
parser/: __init__.py  parser.py
